--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "real-life-project-react",
+  "homepage": "https://howardshou.github.io/real-life-project-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
