Add some script:
When I deploy on github-page, I need to add hompage prop and my github-page URL as value, but after that, I confront  syntax error when I trying to run my local http server...
solution is here: https://stackoverflow.com/questions/54340240/create-react-app-build-uncaught-syntaxerror-unexpected-token
Thus, I decide to add hompage prop into packjson file before project get build and remove it after deploy on github server, then rebuild project  which has no homepage prop in package.json for local server.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "real-life-project-react",
-  "homepage": "https://howardshou.github.io/real-life-project-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,8 +14,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build",
+    "predeploy": "node ./addHomePageURL.js && yarn build && node ./removeHomePageURL.js",
+    "deploy": "gh-pages -d build && yarn build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
